fix: added word-wrap to css

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -163,6 +163,8 @@ textarea {
     padding: 1.5em;
     font-family: 'Source sans 3', Verdana, Geneva, Tahoma, sans-serif;
     color: #000000;
+    word-wrap: break-word;
+    overflow: hidden;
 }
 
 .post-image {
